unified_tests/control_flow/missing_return/expect/build.text.stderr
lib.copp:1:37: error: missing return in function body
  function maybe(x: boolean) -> int64 {
                                      ^
